force-app/main/default/objects/Talent_Bench__c/Talent_Bench__c.object-meta.xml
<CustomObject>
    <label>Talent Bench</label>
    <nameField>
        <displayFormat>TB_ID{0000}</displayFormat>
        <label>Talent Bench ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talent Benches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>