force-app/main/default/objects/Talent_Bench__c/fields/Bench_Age__c.field-meta.xml
<CustomField>
    <fullName>Bench_Age__c</fullName>
    <label>Bench Age</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>