force-app/main/default/objects/Talent_Bench__c/fields/Bench_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bench_Start_Date__c</fullName>
    <label>Bench Start Date</label>
    <type>Date</type>
</CustomField>