force-app/main/default/objects/Talent_Bench__c/fields/Bench_Status__c.field-meta.xml
<CustomField>
    <fullName>Bench_Status__c</fullName>
    <label>Bench Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In-Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>