force-app/main/default/objects/Talent_Bench__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+1</fullName>
                <default>true</default>
                <label>+1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>