force-app/main/default/objects/Talent_Bench__c/fields/Days_in_Bench__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Bench__c</fullName>
    <formula>IF(
Placement_Confirmed_Indicator__c,
Placement_Confirmation_Date__c - Bench_Start_Date__c,
TODAY() - Bench_Start_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Bench</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>