force-app/main/default/objects/Talent_Bench__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Enter Consultant Email Address</inlineHelpText>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>