force-app/main/default/objects/Talent_Bench__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>Enter Consultant First Name</inlineHelpText>
    <label>First Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>