force-app/main/default/objects/Talent_Bench__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>Enter Valid 10 digit Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>