force-app/main/default/objects/Talent_Bench__c/fields/Placement_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Placement_Confirmation_Date__c</fullName>
    <label>Placement Confirmation Date</label>
    <type>Date</type>
</CustomField>