force-app/main/default/objects/Talent_Bench__c/fields/Placement_Confirmed_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Placement_Confirmed_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement Confirmed Indicator</label>
    <type>Checkbox</type>
</CustomField>