force-app/main/default/objects/Talent_Bench__c/fields/Primary_Skills__c.field-meta.xml
<CustomField>
    <fullName>Primary_Skills__c</fullName>
    <label>Primary Skills</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>