force-app/main/default/objects/Talent_Bench__c/fields/Work_Authhorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authhorization__c</fullName>
    <label>Work Authhorization</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>GC-EAD</fullName>
            </value>
            <value>
                <fullName>H1-B</fullName>
            </value>
            <value>
                <fullName>L1-A</fullName>
            </value>
            <value>
                <fullName>L1-B</fullName>
            </value>
            <value>
                <fullName>L2-EAD</fullName>
            </value>
            <value>
                <fullName>OPT-EAD</fullName>
            </value>
            <value>
                <fullName>TV Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>