force-app/main/default/objects/Talent_Bench__c/fields/Years_Of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Of_Experience__c</fullName>
    <label>Years Of Experience</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>