force-app/main/default/objects/Talent_Bench__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>LinkedIn_URL__c</columns>
    <columns>Bench_Status__c</columns>
    <columns>Years_Of_Experience__c</columns>
    <columns>Primary_Skills__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>